--- a/stlyes.css
+++ b/stlyes.css
@@ -1,5 +1,6 @@
 body{
     text-align: center;
+    line-height: 1.5;
     background: #0F2027;  /* fallback for old browsers */
     background: linear-gradient(to right, #2C5364, #203A43, #0F2027); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
@@ -33,9 +34,10 @@ div img{
     border: 2px solid black;
     padding: 0.375rem 0.75rem;
     font-size: 1rem;
-    line-height: 1.5;
+    
     border-radius: 0.25rem;
-    min-width: 100px;
+    min-width: 150px;
+    margin: 5px 5px 5px auto;
 }
 
 .btn:hover{
@@ -48,4 +50,88 @@ div img{
 
 .controls{
     display: inline-block;
+    min-width: 70%;
 }
+
+@media (max-width : 650px) {
+    #b,#f{
+        min-width: 97%;
+    }
+    #d,#e,#c{
+       min-width: 30%; 
+    }
+}
+
+@media (max-width : 450px) {
+    h1{
+        font-size: 1.6rem;
+    }
+    div img{
+        max-width: 90%;
+    }
+}
+
+/* slider css */
+/* The switch - the box around the slider */
+.switch {
+    position: relative;
+    margin: 50px auto auto auto;
+    display: block;
+    width: 60px;
+    height: 34px;
+  }
+  
+  /* Hide default HTML checkbox */
+  .switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+  
+  /* The slider */
+  .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  input:checked + .slider {
+    background-color: #2196F3;
+  }
+  
+  input:focus + .slider {
+    box-shadow: 0 0 1px #2196F3;
+  }
+  
+  input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+  }
+  
+  /* Rounded sliders */
+  .slider.round {
+    border-radius: 34px;
+  }
+  
+  .slider.round:before {
+    border-radius: 50%;
+  }
