--- a/stlyes.css
+++ b/stlyes.css
@@ -96,7 +96,7 @@ div img{
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: #ccc;
+    background-color: #0F2027;
     -webkit-transition: .4s;
     transition: .4s;
   }
@@ -114,11 +114,11 @@ div img{
   }
   
   input:checked + .slider {
-    background-color: #2196F3;
+    background-color: chartreuse;
   }
   
   input:focus + .slider {
-    box-shadow: 0 0 1px #2196F3;
+    box-shadow: 0 0 1px #0F2027;
   }
   
   input:checked + .slider:before {
@@ -134,4 +134,13 @@ div img{
   
   .slider.round:before {
     border-radius: 50%;
+  }
+
+  #icon{
+      color: rgb(219, 205, 205);
+  }
+
+  img{
+      border: 0px !important;
+      margin-top: 10px;
   }
